--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@expo/metro-runtime": "^3.2.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
     "dotenv": "^10.0.0",
