--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
     "dotenv": "^10.0.0",
-    "expo": "^51.0.38",
+    "expo": "51.0.39",
     "expo-constants": "^16.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "^1.12.1",
     "firebase": "^10.5.2",
     "formik": "2.1.4",
